--- a/quay-thu-xsmb.html
+++ b/quay-thu-xsmb.html
@@ -1836,7 +1836,7 @@
                 // Show date info
                 var today = new Date();
                 var dateStr = today.getDate() + '/' + (today.getMonth() + 1) + '/' + today.getFullYear();
-                $('#quaythudate').html('<p>Kết quả quay thử <a href="xo-so-mien-bac/xsmb-p1.html"> xổ số Miền Bắc</a> hôm nay (chế độ offline - ' + dateStr + ').</p>');
+                $('#quaythudate').html('<p>Kết quả quay thử <a href="xo-so-mien-bac/xsmb-p1.html"> xổ số Miền Bắc</a> hôm nay lấy tự động từ kết quả xổ số miền Bắc mở thưởng ngày <a href="xo-so-mien-bac/xsmb-p1.html">30-10-2013</a>.</p>');
             }
             
             function startRandom() {
