--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=quay-thu-xsmb.html">
     <script>
-        window.location.href = "quay-thu-xsmb.html";
+        window.location.href = "quay-thu-xsmb1.html";
     </script>
 </head>
 <body>
