--- a/quay-thu-xsmb.html
+++ b/quay-thu-xsmb.html
@@ -199,7 +199,7 @@
                 </span>
                 <div class=header-logo>
                     <a href="/">
-                        <img alt="trang chu xo so" class=header-logo-img src=https://cdn.xoso.com.vn/images/logo.svg width=135 height=48>
+                        <img alt="trang chu xo so" class=header-logo-img src="images/logo2.jpg" width=135 height=48>
                     </a>
                 </div>
                 <div class=header-time>Hôm nay: Thứ Sáu ngày 12/12/2025</div>
