--- a/quay-thu-xsmb.html
+++ b/quay-thu-xsmb.html
@@ -202,7 +202,7 @@
                         <img alt="trang chu xo so" class=header-logo-img src="images/logo2.jpg" width=135 height=48>
                     </a>
                 </div>
-                <div class=header-time>Hôm nay: Thứ Sáu ngày 12/12/2025</div>
+                <!-- <div class=header-time>Hôm nay: Thứ Sáu ngày 12/12/2025</div> -->
                 <div class="header-right w-user">
                     <span data-popup-target=#_pop_login class=btn-login-head role=button tabindex=0 aria-label="Đăng nhập">
                         <svg width=16 height=16 viewBox="3 2 18 20" data-name="Flat Color" xmlns=http://www.w3.org/2000/svg class="icon flat-color">
